--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,32 +1,46 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Nov 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>02:00</td>  <td>Intro to R and RStudio</td> </tr>
+      <tr> <td>03:00</td>  <td>Break</td> </tr>
+      <tr> <td>03:10</td>  <td>Project Management</td> </tr>
+      <tr> <td>03:35</td>  <td>Getting Help</td> </tr>
+      <tr> <td>03:45</td>  <td>Data Structures</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Nov 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>08:00</td>  <td>Data Structures</td> </tr>
+      <tr> <td>08:35</td>  <td>Data Frames</td> </tr>
+      <tr> <td>09:05</td>  <td>Break</td> </tr>
+      <tr> <td>09:10</td>  <td>Subsetting data</td> </tr>
+      <tr> <td>10:00</td>  <td>Control flow</td> </tr>
+      <tr> <td>10:45</td>  <td>Break</td> </tr>
+      <tr> <td>11:00</td>  <td>Control flow</td> </tr>
+      <tr> <td>11:15</td>  <td>Base graphics</td> </tr>
+      <tr> <td>11:30</td>  <td>Lunch</td> </tr>
+      <tr> <td>01:00</td>  <td>ggplot</td> </tr>
+      <tr> <td>02:15</td>  <td>Vectorization</td> </tr>
+      <tr> <td>02:35</td>  <td>Break</td> </tr>
+      <tr> <td>02:40</td>  <td>Functions</td> </tr>
+      <tr> <td>03:40</td>  <td>Writing Data</td> </tr>
+      <tr> <td>16:30</td>  <td>END</td> </tr>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Nov 3</h3>
+    <table class="table table-striped">
+      <tr> <td>02:00</td>  <td>Review and questions</td> </tr>
+      <tr> <td>02:15</td>  <td>Data frame manipulation using dplyr</td> </tr>
+      <tr> <td>03:05</td>  <td>Break</td> </tr>
+      <tr> <td>03:10</td>  <td>Data frame manipulation using tidyr</td> </tr>
+      <tr> <td>04:00</td>  <td>Knitr??</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
